// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: invalid-child-node-name.txt 1`] = `
"/invalid-child-node-name.txt: On demand nodes inside <Parent> must be a member of it, got <LeafChild>, did you mean <Parent.LeafChild> ?
   7 |     <Parent>
   8 |       <JsxOnDemandChildren>
>  9 |         <LeafChild prop={true} />
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |       </JsxOnDemandChildren>
  11 |     </Parent>
  12 |   );"
`;

exports[`matches expected output: invalid-child-type.txt 1`] = `
"/invalid-child-type.txt: On demand nodes inside <Parent> must be a member of it, got <LeafChild>, did you mean <Parent.LeafChild> ?
   7 |     <Parent>
   8 |       <JsxOnDemandChildren>
>  9 |         <LeafChild prop={true} />
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |         {invalidChild}
  11 |       </JsxOnDemandChildren>
  12 |     </Parent>"
`;

exports[`matches expected output: simple.txt 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
'use strict';

import React from 'react';

function Test() {
  return (
    <Parent>
      <JsxOnDemandChildren>
        <Parent.LeafChild prop={true} />
      </JsxOnDemandChildren>
    </Parent>
  );
};
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
'use strict';

import React from 'react';

function Test() {
  return <Parent LeafChild={() => <Parent.LeafChild prop={true} />}></Parent>;
}

`;

exports[`matches expected output: simple-other-children.txt 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
'use strict';

import React from 'react';

function Test() {
  return (
    <Parent>
      <JsxOnDemandChildren>
        <Parent.LeafChild prop={true} />
      </JsxOnDemandChildren>
      <Other />
    </Parent>
  );
};
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
'use strict';

import React from 'react';

function Test() {
  return (
    <Parent LeafChild={() => <Parent.LeafChild prop={true} />}>
      <Other />
    </Parent>
  );
}

`;
